--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -11,5 +11,15 @@ user.active=Active
 user.registered=Registered
 
 meal.title=Meals
+meal.date=Date/Time
+meal.description=Description
+meal.calories=Calories
+meal.fromDate=From Date
+meal.toDate=To Date
+meal.fromTime=From Time
+meal.toTime=To Time
+meal.addMeal=+Add
+meal.edit=Edit Meal
+meal.create=Create Meal
 
 common.select=Select
